# vss

./: ._BASE_1972.gitignore.swp  ._LOCAL_1972.gitignore.swp  ._REMOTE_1972.gitignore.swp  .gitignore  .gitignore.swp  _REMOTE_1972.gitignore  pyproject.toml
docs/: testplan.md  tr.md
libs/storage_client/: __init__.py.orig  client.py  config.py
libs/storage_client/storage_client.egg-info/: SOURCES.txt  top_level.txt
libs/worker/: loaders.py  test.py  worker.py
orv_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: docker-compose.yml
services/API_Gateaway/: .DS_Store.orig  server.py
services/data/.minio.sys/: format.json
services/data_manager/: main.py
services/libs/storage_client/: pyproject.toml
services/libs/storage_client/storage_client/: client.py  config.py
services/libs/storage_client/storage_client.egg-info/: PKG-INFO
services/planner/: main.py
services/task_manager/: main.py
services/web/: index.html
services/worker/: main.py  worker.py
services/worker/final_output/: final_result.txt
services/worker/reduce_output/: reduced_0.jsonl  reduced_3.jsonl
services/worker/shuffle_files/: part_1_0.jsonl  part_2_0.jsonl
services/worker/spill_files/: spill_0.jsonl
services/worker/storage/1/: final_result.json
storage/1/348d2a28-3bf7-4bca-8432-dfd3a5b0ae89/reduce_output/: reduced_3.jsonl
storage/1/399622c0-f7c7-4bf5-ac22-56d6cbb839b1/reduce_output/: reduced_0.jsonl
storage/1/3f20b7d0-8abf-40b5-a013-55acfe82869a/reduce_output/: reduced_1.jsonl
(+81 files in other folders)
