[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orv-project"
version = "0.1.0"
description = "MapReduce project"
requires-python = ">=3.10"

dependencies = [
    "pika>=1.3.2",
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "services*"]